saving progress on forms

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,7 +27,11 @@
                 <div class="content-column middle-content-column">{% block content %}{% endblock content %}</div>
                 <div class="content-column side-content-column"></div>
             </div>
-            <div class = "footer"></div>
+            <div class = "footer">
+            
+            <a href="admin">Admin</a
+            
+            </div>
         </main>
     </body>
 </html>
