--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -8,4 +8,5 @@
             <p></p>
         {% endfor %}
     </div>
+    <a href="{% url 'post-create' %}">Create Post</a>
 {% endblock content %}
