added shortcuts to templates for easier dev

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -28,9 +28,10 @@
                 <div class="content-column side-content-column"></div>
             </div>
             <div class = "footer">
-            
-            <a href="admin">Admin</a
-            
+                
+            <a href="{% url 'post-create' %}">Create Post</a>
+            <p></p>
+            <a href="{% url 'admin:index' %}" %}>Admin</a
             </div>
         </main>
     </body>
