--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -5,13 +5,14 @@
             <!-- Security token -->
             {% csrf_token %}
  
-            <!-- Using the formset -->
-            {{ form.as_p }}
-            
+            <!-- Using the formset -->   
+            <p>Post Type:</p>         
             {% for i in post_type_list %}
-                <input type="radio" id='{{ i.1 }}' name="post_type" value='{{ i.1 }}'>
-                <label for='{{ i.1 }}'>{{ i.1 }}</label><br>
+                <input type="radio" id='id_radio_{{ i.1 }}' name="post_type_radio" value='{{ i.1 }}'>
+                <label for='id_radio_{{ i.1 }}'>{{ i.1 }}</label><br>
             {% endfor %}
+            {{ form_recipe.as_p }}
+            {{ form_article.as_p }}
             <input type="submit" value="Submit">
         </form>
     </div>
