--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -1,19 +1,34 @@
 {% extends "blog/base.html" %}
 {% block content %}
     <div>
-        <form method="POST" enctype="multipart/form-data">
+        <p>Post Type:</p>         
+        {% for i in post_type_list %}
+            <input type="radio" id='id_radio_{{ i.1 }}' name="post_type_radio" value='{{ i.1 }}'>
+            <label for='id_radio_{{ i.1 }}'>{{ i.1 }}</label><br>
+        {% endfor %}
+        
+        <form method="POST" name="form_recipe" enctype="multipart/form-data">
             <!-- Security token -->
             {% csrf_token %}
  
             <!-- Using the formset -->   
-            <p>Post Type:</p>         
-            {% for i in post_type_list %}
-                <input type="radio" id='id_radio_{{ i.1 }}' name="post_type_radio" value='{{ i.1 }}'>
-                <label for='id_radio_{{ i.1 }}'>{{ i.1 }}</label><br>
-            {% endfor %}
             {{ form_recipe.as_p }}
-            {{ form_article.as_p }}
+            {{ formset.non_form_errors }}
             <input type="submit" value="Submit">
         </form>
+        
+        <form method="POST" name="form_article" enctype="multipart/form-data">
+            <!-- Security token -->
+            {% csrf_token %}
+        
+            <!-- Using the formset --> 
+            {{ form_article.as_p }}
+            {{ form.as_p }}
+            <input type="submit" value="Submit">
+        </form>
+        
     </div>
+    <script>
+        
+    </script>
 {% endblock content %}
