--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,15 +3,22 @@
     <div>
         <h1>{{ post.title }}</h1>
         <p>{{ post.author }}</p>
-        <content>
-        </content>
-        <p>Date Posted: {{ post.date_posted }}</p>
-        <p>last edit: {{ post.date_last_edited }}</p>
-        <p>Source: {{ post.recipe.source }}</p>
-        <h2>Ingredients</h2>
-        {% for ingredient in post.recipe.ingredient_set.all %}
-            <p>{{ ingredient.quantity }} {{ ingredient.ingredient }}</p>
-        {% endfor %}
-        
+        {% if post.post_type == 'recipe' %}
+            <p>Date Posted: {{ post.date_posted }}</p>
+            <p>last edit: {{ post.date_last_edited }}</p>
+            <p>Source: {{ post.recipe.source }}</p>
+            <h2>Ingredients</h2>
+            {% for ingredient in post.recipe.ingredient_set.all %}
+                <p>{{ ingredient.quantity }} {{ ingredient.unit_of_measurement }} {{ ingredient.ingredient }}</p>                
+            {% empty %}
+                <p>This recipe has no ingredients recorded.</p>
+            {% endfor %}
+        {% elif post.post_type == 'article' %}
+            <p>Date Posted: {{ post.date_posted }}</p>
+            <p>last edit: {{ post.date_last_edited }}</p>
+            <p>Source: {{ post.recipe.source }}</p>
+            <p>{{ post.article.text }}</p>
+        {% endif %}
+
     </div>
 {% endblock content %}
