--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -1,4 +1,4 @@
-{% extends "blog/base.html" %}
+{% extends "recipes/base.html" %}
 {% block content %}
 {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'contact/contact.css' %}">
