--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -23,6 +23,11 @@
             <a>My Menu</a>
             <a class="{% if request.get_full_path == '/contact/' %}active{% endif %}" href="{% url 'contact-form' %}">Contact</a>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="responsiveNavbar()">&#9776;</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'user-logout' %}">Logout</a>
+            {% else %}
+                <a href="{% url 'user-login' %}">Login</a>
+            {% endif %}
         </ul>
         <main>
             <div class="header"></div>
@@ -32,12 +37,6 @@
                     {% block content %}{% endblock content %}
                 </div>
                 <div class="content-column side-content-column"></div>
-            </div>
-            <div class = "footer">
-                
-                <a href="{% url 'recipe-create' %}">New Recipe</a>
-                <p></p>
-                <a href="{% url 'admin:index' %}" %}>Admin</a>
             </div>
         </main>
     </body>
