--- a/recipes/templates/recipes/home.html
+++ b/recipes/templates/recipes/home.html
@@ -1,4 +1,10 @@
 {% extends "recipes/base.html" %}
 {% block content %}
-    <a href="/{{ user }}">{{ user }}</a>
+    {% if user.is_authenticated %}
+        <a href="{% url 'user-detail' user.pk %}">{{ user }}</a><br>
+        <br>
+        <a href="{% url 'recipe-create' %}">New Recipe</a><br>
+        <br>
+        <a href="{% url 'admin:index' %}" %}>Admin</a>
+    {% endif %}
 {% endblock content %}
