--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -20,7 +20,6 @@
         <ul class="nav-bar" id="navbar">
             <a class="{% if request.get_full_path == '/' %}active{% endif %}" href="{% url 'home' %}">Home</a>
             <a class="{% if request.get_full_path == '/recipes/' %}active{% endif %}" href="{% url 'recipe-list' %}">Recipes</a>
-            <a>My Menu</a>
             <a class="{% if request.get_full_path == '/contact/' %}active{% endif %}" href="{% url 'contact-form' %}">Contact</a>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="responsiveNavbar()">&#9776;</a>
             {% if user.is_authenticated %}
@@ -30,6 +29,19 @@
             {% endif %}
         </ul>
         <main>
+            <div class="message-container">
+                {% if messages %}
+                    <ul class="contact-form-alert_message {{ message.tags }}">
+                        {% for message in messages %}
+                            {% if message.tags == 'success' %}
+                                <p>{{ message }}</p>
+                            {% elif message.tags == "error" %}
+                                <p {% if message.tags %} class="{{ message.tags }}"{% endif %}>- {{ message|striptags }}</p>
+                            {% endif %}
+                        {% endfor %}
+                    </ul>
+                {% endif %}
+            </div>
             <div class="header"></div>
             <div class="content-column-container">
                 <div class="content-column side-content-column"></div>
