--- a/profiles/templates/profiles/user_register.html
+++ b/profiles/templates/profiles/user_register.html
@@ -1,12 +1,10 @@
 {% extends "recipes/base.html" %}
 {% block content %}
-<div>
-    <form method="POST" name="login_form" enctype="multipart/form-data">
+    <form method="POST" name="user_form" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.as_p }}
         {{ formset.non_form_errors }}
         {{ formset.errors }}
         <button type="Submit" name="Submit" value="Submit">Submit</button>
     </form>
-</div>
 {% endblock content %}
