--- a/recipes/templates/recipes/home.html
+++ b/recipes/templates/recipes/home.html
@@ -1,10 +1,8 @@
 {% extends "recipes/base.html" %}
 {% block content %}
     {% if user.is_authenticated %}
-        <a href="{% url 'user-detail' user.pk %}">{{ user }}</a><br>
+        <a href="{% url 'profile-detail' user.pk %}">{{ user }}</a><br>
         <br>
         <a href="{% url 'recipe-create' %}">New Recipe</a><br>
-        <br>
-        <a href="{% url 'admin:index' %}" %}>Admin</a>
     {% endif %}
 {% endblock content %}
