--- a/recipes/templates/recipes/recipe_confirm_delete.html
+++ b/recipes/templates/recipes/recipe_confirm_delete.html
@@ -2,8 +2,7 @@
 {% block content %}
     <form method="post">
         {% csrf_token %}
-        <p>Are you sure you want to delete "{{ object }}"?</p>
-        {{ form }}
+        <p>Are you sure you want to delete the recipe "{{ object.title }}"?</p>
         <input type="submit" value="Confirm">
     </form>
 {% endblock content %}
