Changed login form and added user update view.

--- a/profiles/templates/profiles/user_detail.html
+++ b/profiles/templates/profiles/user_detail.html
@@ -2,6 +2,7 @@
 {% block content %}
     <p>test for user_detail.html</p>
     <p>current use is {{ user.username }}</p>
-
-    <a href="{% url 'user-logout' %}">Logout</a>
+    <p>{{ user.slug }}</p>
+    <a href="{% url 'profile-update' user.slug %}">Update</a>
+    <a href="{% url 'profile-logout' %}">Logout</a>
 {% endblock content %}
