--- a/recipes/templates/recipes/base.html
+++ b/recipes/templates/recipes/base.html
@@ -23,9 +23,9 @@
             <a class="{% if request.get_full_path == '/contact/' %}active{% endif %}" href="{% url 'contact-form' %}">Contact</a>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="responsiveNavbar()">&#9776;</a>
             {% if user.is_authenticated %}
-                <a href="{% url 'user-logout' %}">Logout</a>
+                <a href="{% url 'profile-logout' %}">Logout</a>
             {% else %}
-                <a href="{% url 'user-login' %}">Login</a>
+                <a href="{% url 'profile-login' %}">Login</a>
             {% endif %}
         </ul>
         <main>
