--- a/recipes/templates/recipes/home.html
+++ b/recipes/templates/recipes/home.html
@@ -1,8 +1,7 @@
 {% extends "recipes/base.html" %}
 {% block content %}
     {% if user.is_authenticated %}
-        <a href="{% url 'profile-detail' user.slug %}">{{ user }}</a><br>
-        <br>
+        <a href="{{ user.get_absolute_url }}">{{ user }}'s Profile</a><br>
         <a href="{% url 'recipe-create' %}">New Recipe</a><br>
     {% endif %}
 {% endblock content %}
