--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -3,17 +3,35 @@
     <div>
         <h1>{{ recipe.title }}</h1>
         <p>{{ recipe.difficulty }}</p>
-        <p>Posted By: {{ recipe.author }} - Source: {{ recipe.source }}</p>
-        <p>Last Edit: {{ recipe.date_last_edited }}</p>
+        <p>Posted By: {{ recipe.author }}</p>
+        <p>Prep Time: {{ recipe.prep_time }} Cook Time: {{ recipe.cook_time }}</p>
+        <p>{{ recipe.date_last_edited }}</p>
         <h3>Ingredients</h3>
-        {% for ingredient in recipe.ingredient_set.all %}
-            <p>{{ ingredient.quantity }} {{ ingredient.unit_of_measurement }} {{ ingredient.ingredient }}</p>                
-        {% empty %}
-            <p>This recipe has no ingredients recorded.</p>
-        {% endfor %}
+        <ul>
+            {% for ingredient in recipe.ingredient_set.all %}
+                <li>
+                    {{ ingredient.quantity }} {{ ingredient.unit_of_measurement }} {{ ingredient.ingredient }}             
+                </li>
+            {% empty %}
+                <p>This recipe has no ingredients recorded.</p>
+            {% endfor %}
+        </ul>
+        <h3>Directions</h3>
+        <ul>
+            {% for direction in recipe.recipedirection_set.all %}
+                <li>
+                    {{ direction.direction_text }}             
+                </li>
+            {% empty %}
+                <p>This recipe has no directions yet.</p>
+            {% endfor %}
+        </ul>
         {% if recipe.note %}
             <h5> Recipe Notes:</h5>
             <h6>{{ recipe.note }}</h6>
+        {% endif %}
+        {% if recipe.source %}
+            <p>See original source at <a href="https://www.google.com">{{ recipe.source }}</a></p>
         {% endif %}
     </div>
     {% if recipe.author ==  user or user.is_staff == True %}
