--- a/recipes/templates/recipes/recipe_detail.html
+++ b/recipes/templates/recipes/recipe_detail.html
@@ -11,7 +11,7 @@
         <ul>
             {% for ingredient in recipe.ingredient_set.all %}
                 <li>
-                    {{ ingredient.quantity }} {{ ingredient.unit_of_measurement }} {{ ingredient.ingredient }}             
+                    {{ ingredient.quantity }} {{ ingredient.unit_of_measurement }} {{ ingredient.ingredient_name }}             
                 </li>
             {% empty %}
                 <p>This recipe has no ingredients recorded.</p>
