--- a/recipes/templates/recipes/recipe_update_form.html
+++ b/recipes/templates/recipes/recipe_update_form.html
@@ -1,9 +1,52 @@
 {% extends "recipes/base.html" %}
 {% block content %}
-    <form method="post">
+    <form method="POST" name="recipe_form" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="Submit" name="Submit" value="Update">Update</button>
-        <a href="{% url 'recipe-delete' recipe.slug %}">Delete</a>
+        <div class="recipe-form-input-container">
+
+            <div class="recipeform-container">
+                {% for field in form %}
+                    <div>
+                        {% if field.errors %}<p>{{ field.errors }}</p>{% endif %}
+                        <p><label>{{ field.label }}: </label>{{ field }}</p>
+                    </div>
+                {% endfor %} 
+            </div>
+            
+            <div class="recipeingredientformset-container">
+                {{ RecipeIngredientFormset.management_form }}
+                {% if RecipeIngredientFormset.errors %}
+                {{ RecipeIngredientFormset.errors }}
+                {% endif %}
+                {{ RecipeIngredientFormset.non_form_errors }}
+                {% for IngredientForm in RecipeIngredientFormset %}
+                    <div>
+                        {% if IngredientForm.errors %}
+                        <p>{{ IngredientForm.errors }}</p>
+                        {% endif %}
+                        <p>{{ IngredientForm }}</p>
+                    </div>
+                {% endfor %}
+            </div>
+        
+            <div class="recipestepformset-container">
+                {{ RecipeStepFormset.management_form }}
+                {% if RecipeStepFormset.errors %}
+                {{ RecipeStepFormset.errors }}
+                {% endif %}
+                {{ RecipeStepFormset.non_form_errors }}
+                {% for StepForm in RecipeStepFormset %}
+                    <div>
+                        {% if StepForm.errors %}
+                        <p>{{ StepForm.errors }}</p>
+                        {% endif %}
+                        <p>{{ StepForm }}</p>
+                    </div>
+                {% endfor %}
+            </div>
+            
+            <button type="Submit" name="Submit" value="Update">Update</button>
+            <a href="{% url 'recipe-delete' recipe.slug %}">Delete</a>
+        </div>
     </form>
 {% endblock content %}
