--- a/recipes/templates/recipes/recipe_confirm_delete.html
+++ b/recipes/templates/recipes/recipe_confirm_delete.html
@@ -1,4 +1,4 @@
-{% extends "recipes/base.html" %}
+{% extends "website/base.html" %}
 {% block content %}
     <form method="post">
         {% csrf_token %}
