--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -1,4 +1,4 @@
-{% extends "recipes/base.html" %}
+{% extends "website/base.html" %}
 {% block content %}
 <h1>Recipes</h1>
 <form>
@@ -30,4 +30,7 @@
         {% endif %}
     </span>
 </div>
+{% if user.is_authenticated %}
+    <a href="{% url 'recipe-create' %}">Add New Recipe</a><br>
+{% endif %}
 {% endblock content %}
