--- a/recipes/templates/recipes/recipe_update_form.html
+++ b/recipes/templates/recipes/recipe_update_form.html
@@ -1,4 +1,4 @@
-{% extends "recipes/base.html" %}
+{% extends "website/base.html" %}
 {% block content %}
     <form method="POST" name="recipe_form" enctype="multipart/form-data">
         {% csrf_token %}
