Created plant app initial files.

--- a/profiles/templates/profiles/user_detail.html
+++ b/profiles/templates/profiles/user_detail.html
@@ -1,4 +1,4 @@
-{% extends "recipes/base.html" %}
+{% extends "website/base.html" %}
 {% block content %}
     <p>test for user_detail.html</p>
     <p>current use is {{ user.username }}</p>
