--- a/profiles/templates/profiles/user_login.html
+++ b/profiles/templates/profiles/user_login.html
@@ -1,4 +1,4 @@
-{% extends "recipes/base.html" %}
+{% extends "website/base.html" %}
 {% block content %}
 <div>
     <form method="POST" name="login_form" enctype="multipart/form-data">
