--- a/profiles/templates/profiles/user_register.html
+++ b/profiles/templates/profiles/user_register.html
@@ -1,4 +1,4 @@
-{% extends "recipes/base.html" %}
+{% extends "website/base.html" %}
 {% block content %}
     <form method="POST" name="user_form" enctype="multipart/form-data">
         {% csrf_token %}
