--- a/profiles/templates/profiles/new_user_welcome.html
+++ b/profiles/templates/profiles/new_user_welcome.html
@@ -1,4 +1,4 @@
-{% extends "recipes/base.html" %}
+{% extends "website/base.html" %}
 {% block content %}
     <p>Welcome to SteinTech.</p>
 {% endblock content %}
