--- a/profiles/templates/profiles/user_update_form.html
+++ b/profiles/templates/profiles/user_update_form.html
@@ -1,4 +1,4 @@
-{% extends "recipes/base.html" %}
+{% extends "website/base.html" %}
 {% block content %}
     <form method="post">
         {% csrf_token %}
